--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -1,22 +1,22 @@
 <nav class="navbar navbar-expand-sm bg-body-tertiary fixed-top opacity-75">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/home">Symfony day 1</a>
+    <a class="navbar-brand" href="/"><i class="fa-regular fa-compass fa-2xl"></i> VivaTrip</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="/home">Home</a>
+          <a class="nav-link active" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/random/30">Random</a>
+          <a class="nav-link active" href="/about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/array">Array</a>
+          <a class="nav-link active" href="/news">News</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/sandbox">Sandbox</a>
+          <a class="nav-link active" href="/contact">Contact</a>
         </li>
       </ul>
     </div>
