--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,9 @@
     {% block stylesheets %} {% endblock %} {% block javascripts %} {% endblock %}
   </head>
   <body>
-    {% block body %}{% endblock %}
+    {% include "components/navbar.html.twig" %}
+    <div class="mt-5 py-4">{% block body %}Hello{% endblock %}</div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
