--- a/templates/news/index.html.twig
+++ b/templates/news/index.html.twig
@@ -1,5 +1,6 @@
-{% extends 'base.html.twig' %} {% block title %}Contact | {{ parent() }}{% endblock %} {% block body %}
+{% extends 'base.html.twig' %} {% block title %}News | {{ parent() }}{% endblock %} {% block body %}
 <style></style>
+
 <div class="container my-5 py-5">
   <h1 class="text-center">Heading</h1>
 </div>
