--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -1,20 +1,6 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Hello AboutController!{% endblock %}
-
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Applications/XAMPP/xamppfiles/htdocs/symfony/travel_agency/travel_agency/src/Controller/AboutController.php'|file_link(0) }}">src/Controller/AboutController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Applications/XAMPP/xamppfiles/htdocs/symfony/travel_agency/travel_agency/templates/about/index.html.twig'|file_link(0) }}">templates/about/index.html.twig</a></code></li>
-    </ul>
+{% extends 'base.html.twig' %} {% block title %}About | {{ parent() }}{% endblock %} {% block body %}
+<style></style>
+<div class="container my-5 py-5">
+  <h1 class="text-center">Who we are</h1>
 </div>
 {% endblock %}
