--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,15 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <title>{% block title %}Viva la Trip{% endblock %}</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link rel="stylesheet" href="{{ asset('css/style.css') }}" />
     <script src="https://kit.fontawesome.com/553d5d3b41.js" crossorigin="anonymous"></script>
     {% block stylesheets %} {% endblock %} {% block javascripts %} {% endblock %}
   </head>
   <body>
-    {% include "components/navbar.html.twig" %}
-    <div class="mt-5 py-4">{% block body %}Hello{% endblock %}</div>
+    {% include "components/navbar.html.twig" %} {% block body %}Hello{% endblock %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
