--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm bg-body-tertiary fixed-top opacity-75">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><i class="fa-regular fa-compass fa-2xl"></i> VivaTrip</a>
+    <a class="navbar-brand" href="/"><i class="fa-regular fa-compass fa-2xl"></i> Viva la Trip</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
