--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -20,7 +20,7 @@
               <img src="https://images.unsplash.com/photo-1505118380757-91f5f5632de0?q=80&w=2452&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100 object-fit-cover" alt="..." />
               <div class="mb-5 carousel-caption d-none d-md-block bg-light text-dark rounded-pill opacity-75">
                   <h1 class="">Let's book a trip!</h1>
-                  <a class="btn btn-dark my-2 rounded-pill px-4" href="#list">List<i class="fa-solid fa-arrow-down-long"></i></a>
+                  <a class="btn btn-dark my-2 rounded-pill px-4" href="#list"><i class="fa-solid fa-arrow-down-long"></i><i class="fa-solid fa-arrow-down-long"></i><i class="fa-solid fa-arrow-down-long"></i></a>
               </div>
           </div>
           <div class="carousel-item" data-bs-interval="2000">
@@ -50,7 +50,7 @@
             <div class="mb-4">
                 <div class="col">
                     <div class="card h-100">
-                      <img src="https://images.unsplash.com/photo-1507608616759-54f48f0af0ee?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="...">
+                      <img src="https://images.unsplash.com/photo-1507608616759-54f48f0af0ee?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top object-fit-cover" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -64,7 +64,7 @@
             <div class="mb-4">
                 <div class="col">
                     <div class="card h-100">
-                      <img src="https://images.unsplash.com/photo-1527631746610-bca00a040d60?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="...">
+                      <img src="https://images.unsplash.com/photo-1527631746610-bca00a040d60?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top object-fit-cover" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -78,7 +78,7 @@
             <div class="mb-4">
                 <div class="col">
                     <div class="card h-100">
-                      <img src="https://images.unsplash.com/photo-1506929562872-bb421503ef21?q=80&w=2568&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="...">
+                      <img src="https://images.unsplash.com/photo-1506929562872-bb421503ef21?q=80&w=2568&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top object-fit-cover" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
