--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -42,50 +42,27 @@
       </div>
 </section>
 <section>
-    <div class="container py-5">
-        <h1 id="list" class="text-center">Heading</h1>
+    <div id="list" class="container py-5">
         <div class="row row-cols-xs-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-3">
+
             {# Card strts #}
 
+            {% for travel in travels %}
+            
             <div class="mb-4">
                 <div class="col">
                     <div class="card h-100">
-                      <img src="https://images.unsplash.com/photo-1507608616759-54f48f0af0ee?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top object-fit-cover" alt="...">
+                      <img src="{{travel.picture}}" class="card-img-top object-fit-cover" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title mb-3">{{travel.country}}</h5>
+                        <p class="card-text my-1">Town: {{travel.town}}</p>
+                        <p class="card-text">Days: {{travel.days}}</p>
+                        <a class="btn btn-outline-dark btn-sm  d-block" href="/">See more</a>
                       </div>
                     </div>
                 </div>
             </div>
-
-            {# +++ #}
-
-            <div class="mb-4">
-                <div class="col">
-                    <div class="card h-100">
-                      <img src="https://images.unsplash.com/photo-1527631746610-bca00a040d60?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top object-fit-cover" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      </div>
-                    </div>
-                </div>
-            </div>
-
-            {# +++ #}
-
-            <div class="mb-4">
-                <div class="col">
-                    <div class="card h-100">
-                      <img src="https://images.unsplash.com/photo-1506929562872-bb421503ef21?q=80&w=2568&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top object-fit-cover" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      </div>
-                    </div>
-                </div>
-            </div>
+            {% endfor %}
 
             {# Card ends #}
         </div>
